--- a/index.css
+++ b/index.css
@@ -1,3 +1,24 @@
 body {
-    color: aliceblue;
+    color: #BEE7FB;
+}
+
+.card1  {
+    background-color: #932EB0;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+
+.card1:active {
+    border: 2px solid #2EB035;
+    background-color: #650C91;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
 }
